--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
-        font-family: Figtree-Regular, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+    font-family: Figtree-Regular, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
 }
 
 header {
@@ -10,17 +10,17 @@ header {
     justify-content: space-around;
     align-items: center;
     border-bottom: 2px solid #f5f5f6;
-    ;
+    position: fixed;
+    background-color: #ffffff;
+    width: 100%;
 }
 
 .logo_container {
-
     margin-left: 4%;
 }
 
 .logo {
     height: 45px;
-
 }
 
 .nav {
@@ -29,13 +29,12 @@ header {
     justify-content: space-between;
     margin-right: 100px;
     margin-left: 20px;
-
 }
 
 .nav_content {
     text-decoration: none;
     font-weight: 650;
-transition: left .2s ease-out, width .2s ease-out;
+    transition: left .2s ease-out, width .2s ease-out;
     font-size: 14px;
     letter-spacing: .3px;
     color: #282c3f;
@@ -45,7 +44,6 @@ transition: left .2s ease-out, width .2s ease-out;
 
 #men:hover {
     border-bottom: 5px solid #ee5f73;
-    ;
 }
 
 #women:hover {
@@ -74,8 +72,7 @@ transition: left .2s ease-out, width .2s ease-out;
 
 .nav a sup {
     font-size: 75%;
-
-    color: #ff3f6c;;
+    color: #ff3f6c;
 }
 
 .search_bar {
@@ -84,7 +81,6 @@ transition: left .2s ease-out, width .2s ease-out;
     align-items: center;
     width: 30%;
     margin-right: 20px;
-
 }
 
 .search_input {
@@ -107,89 +103,120 @@ transition: left .2s ease-out, width .2s ease-out;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
-.action_container a{
+
+.action_container a {
     color: black;
     text-decoration: none;
 }
-.action_name{
+
+.action_name {
     font-weight: 600;
 }
 
 .action_bar {
-      margin-right: 1%;
+    margin-right: 1%;
     display: flex;
     justify-content: space-evenly;
     min-width: 200px;
 }
 
-.image{
+.image {
     width: 96.2%;
 }
-.imagestatic{
+
+.imagestatic {
     position: absolute;
     right: 0%;
-    bottom:21%;
+    bottom: 21%;
     position: fixed;
 }
-.imagestatic2{
+
+.imagestatic2 {
     position: absolute;
     right: 0%;
     bottom: 12%;
     right: 1.5%;
     position: fixed;
 }
-.footer_container1{
+
+footer {
+    padding: 30px 0px 40px 0px;
+    background: #FAFBFC;
+}
+
+.footer_container1 {
     display: flex;
     justify-content: space-evenly;
- 
-
+    margin-top: 4%;
+    margin-left: 6.3%;
+    margin-right: 6.3%;
 }
 
-.footer_column{
-    display: flex;
-    flex-direction: column;
-}
-.footer_column a{
-    color:#696b79 ;
-    text-decoration: none;
-}
-.footer_column h3{
-    color: #282c3f;
-     font-size: 12px;
+#link {
+    color: #000000;
+    font-size: 12px;
     font-weight: 700;
 }
 
-.footer_container2{
+.footer_column1 {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer_column1 a {
+    color: #696b79;
+    text-decoration: none;
+}
+
+.footer_column1 h3 {
+    color: #282c3f;
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.social {
+    width: 130px;
+}
+
+.footer_container2 {
     display: flex;
     justify-content: space-evenly;
+    margin-left: 6.3%;
+    margin-right: 6.3%;
 }
-.footer_column2{
+
+.footer_column2 {
     display: flex;
     flex-direction: column;
     margin-left: 6.3%;
     margin-right: 6.3%;
 }
-.footer_column2 h3{
+
+.footer_column2 h3 {
     color: #282c3f;
     font-size: 12px;
     font-weight: 700;
 }
-.footer_column3{
+
+.footer_container3 {
+    margin-left: 11.8%;
+    margin-right: 11.8%;
+}
+
+.footer_column3 {
     display: flex;
     justify-content: space-between;
-    color:#696b79 ;
-    
+    color: #696b79;
 }
-.footer_column3 a{
-    color:  #526cd0;
+
+.footer_column3 a {
+    color: #526cd0;
     font-weight: 700;
     text-decoration: none;
 }
 
-.txtdeco{
+.txtdeco {
     color: #696b79;
-text-decoration: none;
+    text-decoration: none;
 }
-
